# log4jail

./: Cargo.toml  README.md  log4jail.json
.github/workflows/: release.yml
src/: config.rs  main.rs
