[package]
name = "log4jail"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.1.0"
http = "0.2.5"
once_cell = "1.8.0"
regex = "1.5.4"
tokio = { version = "1.14.0", features = ["full"] }

warp = { version = "0.3", features = ["tls"] }
warp-reverse-proxy = "0.4.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
